package chapter03.example;

public class MP3 {
    public void playSong() {}
}
