package chapter03.example;

public interface TimeProvider {
    void setHours(int hours);
    int getTime();
}
